--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Google OAuth credentials
+client_secret_*.json
+credentials.json
+
 # Dependencies
 node_modules/
 npm-debug.log*
@@ -10,8 +19,6 @@ dist/
 build/
 
 # Sensitive Configuration
-.env
-.env.local
 .env.development.local
 .env.test.local
 .env.production.local
