--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "author": "SheetAPI",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "uuid": "^9.0.0"
   },
@@ -29,4 +30,4 @@
   "engines": {
     "node": ">=14.0.0"
   }
-} 
+}
